
VERSION 0.8.1cvs
================

2006-04-23  Vincent Richard  <vincent@vincent-richard.net>

 * Added vmime::net::folder::destroy() to delete folders on IMAP and
   maildir stores.

2006-04-18  Vincent Richard  <vincent@vincent-richard.net>

 * Renamed 'byte' to 'byte_t' to fix compilation problems on Fedora
   core 5 (thanks to Rafael Fernandez).

2006-02-20  Vincent Richard  <vincent@vincent-richard.net>

 * net/imap/IMAPParser.hpp: added a "relaxed" mode to allow 8-bit
   characters where not allowed by the standard (thanks to Tim Teulings
   for having found the bug).

2006-01-29  Vincent Richard  <vincent@vincent-richard.net>

 * Added service::isSecuredConnection() and service::getConnectionInfos()
   to retrieve information about the connection.

2006-01-16  Vincent Richard  <vincent@vincent-richard.net>

 * Added support for attachments of type "message/rfc822".

2006-01-15  Vincent Richard  <vincent@vincent-richard.net>

 * IMAP: implemented multi-fetching. Now using "FETCH x:y" instead of
   sending (y-x+1) "FETCH" requests.

2005-12-26  Vincent Richard  <vincent@vincent-richard.net>

 * posixSocket.cpp: use getaddrinfo() if available. This should bring
   thread-safe DNS resolution and IPv6 support.

2005-12-18  Vincent Richard  <vincent@vincent-richard.net>

 * IMAPParser.hpp: compatibility bugs + enhanced debugging trace.

2005-12-04  Vincent Richard  <vincent@vincent-richard.net>

 * exception.{hpp|cpp}: fixed segfault in destructor when destroying
   an exception chain with more than 2 elements (thanks to Bertrand
   Benoit).

 * posixChildProcess.cpp: fixed a bug in argument vector; last argument
   was not NULL (thanks to Bertrand Benoit).

2005-11-27  Vincent Richard  <vincent@vincent-richard.net>

 * maildirUtils.cpp: fixed problem with ':' in filename on Windows
   platform (thanks to Benjamin Biron).

 * random.cpp: fixed buffer overrun in random::getString (thanks
   to Benjamin Biron).
