@@ -342,6 +342,7 @@ libvmimetest_sources = [
 	'tests/parser/dispositionTest.cpp',
 	'tests/parser/encoderTest.cpp',
 	'tests/parser/headerTest.cpp',
+	'tests/parser/htmlTextPartTest.cpp',
 	'tests/parser/mailboxTest.cpp',
 	'tests/parser/mediaTypeTest.cpp',
 	'tests/parser/messageIdTest.cpp',
