@@ -50,15 +50,15 @@ public:
 	const ref <const contentHandler> getText() const;
 	void setText(ref <contentHandler> text);
 
+	const int getPartCount() const;
+
+	void generateIn(ref <bodyPart> message, ref <bodyPart> parent) const;
+	void parse(ref <const bodyPart> message, ref <const bodyPart> parent, ref <const bodyPart> textPart);
+
 private:
 
 	ref <contentHandler> m_text;
 	charset m_charset;
-
-	const int getPartCount() const;
-
-	void generateIn(bodyPart& message, bodyPart& parent) const;
-	void parse(const bodyPart& message, const bodyPart& parent, const bodyPart& textPart);
 };
 
 
